--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,15 +3,23 @@ layout: default
 ---
 
 <article class="post">
-    <h1>{{ page.title }}</h1>
+<!--<h1>{{ page.title }}</h1>
 
-    <div class="entry">
-      {{ content }}
-    </div>
-  
-    <div class="date">
-        Written on {{ page.date | date: "%b %e, %Y" }}
-      </div>
-  
-  </article>
+ <p class="view">by {{ page.author | default: site.author }}</p> -->
+
+  <div class="entry">
+    {{ content }}
+  </div>
+
+  {% if page.tags %}
+  <div class="tags">
+    <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+  </div>
+  {% endif %}
+
+  <div class="date">
+    <small>Written on {{ page.date | date: "%b %e, %Y" }}</small>
+  </div>
+
+</article>
   
